--- a/pyTorch/014_siameseNetwork.ipynb
+++ b/pyTorch/014_siameseNetwork.ipynb
@@ -5,8 +5,6 @@
     "colab": {
       "name": "014_siameseNetwork.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOuUs+vkPNCQj5Gz+GQVKU9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/maticvl/dataHacker/blob/master/pyTorch/014_siameseNetwork.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/WaelAlakkad/dataHacker/blob/master/pyTorch/014_siameseNetwork.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -50,8 +48,8 @@
         "import numpy as np\n",
         "import random\n",
         "from PIL import Image\n",
-        "import PIL.ImageOps    \n",
-        "\n",
+        "import PIL.ImageOps\n",
+        "#Hani\n",
         "import torchvision\n",
         "import torchvision.datasets as datasets\n",
         "import torchvision.transforms as transforms\n",
@@ -63,7 +61,7 @@
         "from torch import optim\n",
         "import torch.nn.functional as F"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -79,9 +77,9 @@
         "    if text:\n",
         "        plt.text(75, 8, text, style='italic',fontweight='bold',\n",
         "            bbox={'facecolor':'white', 'alpha':0.8, 'pad':10})\n",
-        "        \n",
+        "\n",
         "    plt.imshow(np.transpose(npimg, (1, 2, 0)))\n",
-        "    plt.show()    \n",
+        "    plt.show()\n",
         "\n",
         "def show_plot(iteration,loss):\n",
         "    plt.plot(iteration,loss)\n",
@@ -98,25 +96,25 @@
       "source": [
         "class SiameseNetworkDataset(Dataset):\n",
         "    def __init__(self,imageFolderDataset,transform=None):\n",
-        "        self.imageFolderDataset = imageFolderDataset    \n",
+        "        self.imageFolderDataset = imageFolderDataset\n",
         "        self.transform = transform\n",
-        "        \n",
+        "\n",
         "    def __getitem__(self,index):\n",
         "        img0_tuple = random.choice(self.imageFolderDataset.imgs)\n",
         "\n",
         "        #We need to approximately 50% of images to be in the same class\n",
-        "        should_get_same_class = random.randint(0,1) \n",
+        "        should_get_same_class = random.randint(0,1)\n",
         "        if should_get_same_class:\n",
         "            while True:\n",
         "                #Look untill the same class image is found\n",
-        "                img1_tuple = random.choice(self.imageFolderDataset.imgs) \n",
+        "                img1_tuple = random.choice(self.imageFolderDataset.imgs)\n",
         "                if img0_tuple[1] == img1_tuple[1]:\n",
         "                    break\n",
         "        else:\n",
         "\n",
         "            while True:\n",
         "                #Look untill a different class image is found\n",
-        "                img1_tuple = random.choice(self.imageFolderDataset.imgs) \n",
+        "                img1_tuple = random.choice(self.imageFolderDataset.imgs)\n",
         "                if img0_tuple[1] != img1_tuple[1]:\n",
         "                    break\n",
         "\n",
@@ -129,9 +127,9 @@
         "        if self.transform is not None:\n",
         "            img0 = self.transform(img0)\n",
         "            img1 = self.transform(img1)\n",
-        "        \n",
+        "\n",
         "        return img0, img1, torch.from_numpy(np.array([int(img1_tuple[1] != img0_tuple[1])], dtype=np.float32))\n",
-        "    \n",
+        "\n",
         "    def __len__(self):\n",
         "        return len(self.imageFolderDataset.imgs)"
       ],
@@ -266,7 +264,7 @@
         "            nn.Conv2d(1, 96, kernel_size=11,stride=4),\n",
         "            nn.ReLU(inplace=True),\n",
         "            nn.MaxPool2d(3, stride=2),\n",
-        "            \n",
+        "\n",
         "            nn.Conv2d(96, 256, kernel_size=5, stride=1),\n",
         "            nn.ReLU(inplace=True),\n",
         "            nn.MaxPool2d(2, stride=2),\n",
@@ -279,13 +277,13 @@
         "        self.fc1 = nn.Sequential(\n",
         "            nn.Linear(384, 1024),\n",
         "            nn.ReLU(inplace=True),\n",
-        "            \n",
+        "\n",
         "            nn.Linear(1024, 256),\n",
         "            nn.ReLU(inplace=True),\n",
-        "            \n",
+        "\n",
         "            nn.Linear(256,2)\n",
         "        )\n",
-        "        \n",
+        "\n",
         "    def forward_once(self, x):\n",
         "        # This function will be called for both images\n",
         "        # It's output is used to determine the similiarity\n",
@@ -396,7 +394,7 @@
       },
       "source": [
         "counter = []\n",
-        "loss_history = [] \n",
+        "loss_history = []\n",
         "iteration_number= 0\n",
         "\n",
         "# Iterate throught the epochs\n",
@@ -463,7 +461,7 @@
         "\n",
         "    # Concatenate the two images together\n",
         "    concatenated = torch.cat((x0, x1), 0)\n",
-        "    \n",
+        "\n",
         "    output1, output2 = net(x0.cuda(), x1.cuda())\n",
         "    euclidean_distance = F.pairwise_distance(output1, output2)\n",
         "    imshow(torchvision.utils.make_grid(concatenated), f'Dissimilarity: {euclidean_distance.item():.2f}')"
@@ -597,9 +595,7 @@
       "metadata": {
         "id": "JnArRrUDK8hi"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     }
