--- a/pyTorch/014_siameseNetwork.ipynb
+++ b/pyTorch/014_siameseNetwork.ipynb
@@ -34,6 +34,7 @@
       },
       "source": [
         "%matplotlib inline\n",
+        "#hani\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "import random\n",
